kube/services/netpolicy/networkpolicy_portal_templ.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: networkpolicy-portal
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: portal 
  ingress:
    - from:
      - podSelector:
          matchLabels:
            app: portal
      - podSelector:
          matchLabels:
             app: revproxy
      ports:
         - port: 80
         - port: 443
  egress:
    - to:
      - podSelector:
          matchLabels:
            app: portal
      - podSelector:
          matchLabels:
            app: revproxy
      - ipBlock:
           cidr: GEN3_CLOUDPROXY_IP/32
      - ipBlock:
           cidr: 54.224.0.0/12
      - ipBlock:
           cidr: 52.92.16.0/20

  policyTypes:
   - Ingress
   - Egress
